[package]
name = "reskit"
version = "0.1.0"
authors = ["yflau <yfliu-xjtu@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
  ".",
  "reskit-utils",
  "reskit-apierrors",
  "reskit-apierrors-derive",
  "reskit-registry",
  "reskit-renderer",
  "reskit-log",
  "reskit-doc",
  "reskit-jose",
  "reskit-sql",
  "reskit-cache",
  "reskit-event",
  "reskit-client",
  "reskit-server",
  "reskit-workflow",
  "reskit-graphql",
]
