[package]
name = "reskit-apierrors-derive"
version = "0.1.0"
authors = ["yflau <yfliu-xjtu@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]
default = []
pvlost = []

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0.45"