[package]
name = "reskit-apierrors"
version = "0.1.0"
authors = ["yflau <yfliu-xjtu@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde"]
serde = ["serde_qs", "serde_crate", "serde_json", "serde_urlencoded", "url/serde"]

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
enum-display-derive = "0.1.1"
http-types = "2.10.0"
url = "2.1.1"
lazy_static = "1.4.0"
strum = "0.20"
strum_macros = "0.20"

# features: serde
serde_json = { version = "1.0.51", optional = true }
serde_crate = { version = "1.0.106", features = ["derive"], optional = true, package = "serde" }
serde_urlencoded = { version = "0.7.0", optional = true}
serde_qs = { version = "0.7.0", optional = true }
