[package]
name = "reskit-utils"
version = "0.1.0"
authors = ["yflau <yfliu-xjtu@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linkme = "0.2"
lazy_static = "1.4.0"
shadow-rs = "0.5"

[build-dependencies]
shadow-rs = "0.5"